# smart-screenshot-sorter

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/smart_screenshot_sorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sss/: cli.py  dedupe.py  metadata.py  mover.py  renamer.py  summary.py  test_cli_execute.py
tests/: test_cli_dry_run.py  test_dedupe_basic.py  test_metadata_ext.py  test_mover_basic.py  test_scan_basic.py
